# deile

./: .deile-progress.md  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pymarkdown  CHANGELOG.md  CLAUDE.md  Dockerfile  HEALTHCHECK.md  LICENSE  PR89-ACC.md  PR89-ACCEPTED.md  README.md  backward_compatibility_test.py  comprehensive_integration_test.py  continue.txt  deile.py  deile.sh  dev-requirements.txt  hot_reload_test.py  isolated_config_test.py  minimal_config_test.py  mypy-baseline.txt  pyproject.toml  pytest.ini  requirements.txt  self-fix.sh  self-improve.sh  simple_integration_test.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  intent.md  refactor_proposal.md
.github/workflows/: ci.yml  install-smoke.yml
archive/discord_bot_legacy/: README.md
claude_dev/: 0_deile-agent.md  1_agent_persona.md  2_system_architecture_context.md  3_brief_project_documentation.md  4_core_architectural_principles.md  5_mandatory_operational_workflow.md  6_code_generation_directives.md  7_documentation_directives.md  8_system_specific_guidelines.md
config/: deile_bot.example.yaml  deile_bot.yaml  deilebot.example.yaml  deilebot.yaml  display.yaml  permissions.yaml  pipeline_schedule_default.yaml  pipeline_schedule_m-alfa.yaml  pipeline_schedule_m-beta.yaml  search.yaml  settings.json
data/: deile_sessions.sqlite
deile/: __init__.py  __main__.py  __version__.py  _text_truncate.py  calculator.py  cli.py  cli_install.py  cli_session_helpers.py
deile/commands/: __init__.py  _sentinels.py  _settings_security_hooks.py  actions.py  base.py  cli_flags.py  registry.py  settings_manager.py  skill_loader.py
deile/common/: __init__.py  bearer.py  markup_ast.py  math_utils.py  numbers.py  text_utils.py  tool_args.py
deile/config/: __init__.py  _coercions.py  _models.py  api_config.yaml  commands.yaml  env_store.py  intent_patterns.yaml  manager.py  model_providers.yaml  persona_config.yaml  settings.py  skills.yaml  system_config.yaml
deile/core/: __init__.py  _intent_models.py  agent.py  agent_autonomous.py  agent_streaming.py  bot_hooks.py  bot_streaming.py  context_manager.py  deile_md_loader.py  exceptions.py  file_resolver.py  intent_analyzer.py  intent_metrics.py  intent_tier_mapper.py  loop_guard.py  proactive_analyzer.py  session_store.py  tool_loop_executor.py  tool_result_summary.py  tool_scenario_kwargs.py  usage_envelope.py  validation_gate.py
deile/cron/: __init__.py  agent_bridge.py  constants.py  parsing.py  runner.py  store.py
deile/events/: __init__.py  event_bus.py  event_handlers.py
deile/evolution/: __init__.py  benchmarker.py  code_modifier.py  improvement_loop.py  rollback_manager.py  safety_sandbox.py  self_analyzer.py
deile/infrastructure/: __init__.py  circuit_breaker.py  deile_monitor_client.py  deile_worker_client.py  google_file_api.py
deile/integrations/: __init__.py
deile/log_mgmt/: __init__.py  log_analyzer.py  log_dispatcher.py  log_patterns.py  log_rotator.py
deile/logging/: __init__.py  log_analyzer.py  log_dispatcher.py  log_rotator.py
deile/memory/: __init__.py  episodic_memory.py  memory_consolidation.py  memory_manager.py  procedural_memory.py  semantic_memory.py  working_memory.py
deile/observability/: __init__.py  _redaction.py  config.py  dispatch_export.py  dispatch_log_export.py  dispatch_metrics.py  dispatch_schema.py  metrics.py  no_op.py  semconv_mapping.py  tracer.py  usage_sidecar.py
deile/orchestration/: __init__.py  _deps.py  _objective_steps.py  _paths.py  _plan_models.py  approval_system.py  artifact_manager.py  plan_manager.py  run_manager.py  sqlite_task_manager.py  task_manager.py  workflow_executor.py
deile/parsers/: __init__.py  base.py  command_parser.py  diff_parser.py  file_parser.py  intelligent_file_parser.py  registry.py
deile/personas/: __init__.py  _persona_models.py  audit_integration.py  base.py  builder.py  config.py  context.py  error_context.py  error_recovery.py  instruction_loader.py  integration.py  loader.py  manager.py
deile/plugins/: __init__.py  dependency_resolver.py  hot_loader.py  marketplace.py  plugin_manager.py  sandbox.py
deile/preferences/: __init__.py  store.py
deile/runtime/: __init__.py  instance_state.py  registry.py  status_server.py
deile/security/: __init__.py  audit_logger.py  permissions.py  secrets_scanner.py
deile/skills/: __init__.py  base.py  bootstrap.py  config.py  discovery.py  language_detector.py  loader.py  registry.py  router.py  slash_command_bridge.py  watcher.py
deile/storage/: __init__.py  aio_fileio.py  debug_logger.py  embeddings.py  log_rotation.py  logs.py  usage_repository.py
deile/tests/: all.py  backward_compatibility_test.py  comprehensive_integration_test.py  conftest.py  hot_reload_test.py  isolated_config_test.py  minimal_config_test.py  proactive_final_test.py  simple_integration_test.py  smoke_test_bash_execute.py  smoke_test_write_autonomy.py  test_agent_new_provider_path.py  test_anthropic_provider.py  test_autonomy_file_resolver.py  test_autonomy_integration.py  test_autonomy_proactive_analyzer.py  test_base_provider_contract.py  test_bootstrap.py  test_circuit_breaker_is_open.py  test_command_registry_case_insensitive.py  test_conftest_isolation.py  test_context_manager_deile_md.py  test_deepseek_provider.py  test_deile_md_loader.py  (+41 more)
deile_bot/: _testing.py  cli.py
docs/: 2026-05-06_PIPELINE-AUTONOMO.md  2026-05-08_CLI-FLAGS.md  2026-05-08_EVOLVE-3RUN-COMPARISON.md  2026-06-10_HARNESS-PROJECT-AGNOSTIC-E2E-RUNBOOK.md  250503_2030_messaging_tools.md  gemini_api.md  project.md
infra/: _cli_ui.py  _service.py  setup_environment.py
scripts/: bump_version.py  migrate_memory_json_to_sqlite.py  retroactive_gc.py  update_hpa.sh  validate_doc_consistency.py  validate_results_schema.py
src/: agent.py  file_manager.py  gemini_client.py  ui_manager.py
test-your-might/: ola_mundo_claude-haiku-4-5.py  ola_mundo_deepseek-v4-flash.py  ola_mundo_deepseek-v4-pro.py  ola_mundo_gemini-3.1-flash-lite-preview.py  ola_mundo_gpt-5.4-mini.py
(+1137 files in other folders)
