[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deile"
version = "5.1.0"
description = "DEILE — autonomous CLI AI agent"
authors = [{ name = "elimarcavalli" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "aiosqlite>=0.19",
    "tenacity>=8.0.0",
    "python-dotenv>=1.1",
    "PyYAML>=6.0",
    "rich>=14.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "prompt-toolkit>=3.0",
    "tqdm>=4.0",
    "requests>=2.0",
    "urllib3>=2.0",
    "certifi>=2024",
    "cryptography>=44.0.0",
    "charset-normalizer>=3.0",
    "idna>=3.0",
    "uritemplate>=4.0",
    "typing-extensions>=4.0",
    "numpy>=2.0",
    "psutil>=6.0",
    "packaging>=24",
    "google-genai>=1.0",
    "google-api-core>=2.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-httplib2>=0.2",
    "googleapis-common-protos>=1.0",
    "grpcio>=1.76",
    "grpcio-status>=1.76",
    "proto-plus>=1.0",
    "protobuf>=6.0",
    "httplib2>=0.31",
    "pyasn1>=0.6",
    "pyasn1_modules>=0.4",
    "rsa>=4.0",
    "cachetools>=5.0",
    "pyparsing>=3.0",
    "markdown-it-py>=3.0",
    "mdurl>=0.1",
    "Pygments>=2.0",
    "iniconfig>=2.0",
    "pluggy>=1.0",
    "pathspec>=0.12",
    "colorama>=0.4",
    "pydantic-core>=2.0",
    "annotated-types>=0.7",
    "typing-inspection>=0.4",
    "wcwidth>=0.2",
    "chardet>=5.0",
    "GitPython>=3.1",
    "py7zr>=1.1",
    "watchdog>=6.0",
    "google-ai-generativelanguage>=0.7",
    "httpx>=0.25",
]

[project.optional-dependencies]
# Outbound mensageria via deilebot daemon (control-plane HTTP).
# Adicione as deps adicionais do bot via pip install deilebot[discord] no
# repositório elimarcavalli/deilebot — esta extra puxa só o cliente fino.
bot = ["deilebot @ git+https://github.com/elimarcavalli/deilebot.git@main"]
scheduler = ["apscheduler>=3.10"]
webhook = ["fastapi>=0.100", "uvicorn>=0.23"]
test = ["aiohttp>=3.9", "pytest>=7", "pytest-asyncio>=0.23", "pytest-cov>=4"]
# Observabilidade enterprise via OpenTelemetry (issue #303 fase 4).
# DEILE roda em no-op se este extra não está instalado OU se
# DEILE_OTLP_ENDPOINT não está set — instale apenas quando quiser correlacionar
# traces/métricas num backend (Tempo/Loki/Prometheus/Grafana).
otel = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
]
# Shell CLI baseado em Textual (issue #317, Fase 0+1 — opt-in).
# Quando ``textual`` nao esta instalado, ``python3 deile.py --ui textual``
# falha graciosamente com mensagem clara apontando ``pip install -e ".[ui]"``.
# O shell legado (sem flag) continua intocado e nao depende de textual.
ui = [
    "textual>=0.80",
    "pytest-textual-snapshot>=1.0",
]

[project.scripts]
deile = "deile.cli:main"

[tool.setuptools.packages.find]
include = ["deile*"]
exclude = ["deilebot*", "tests*"]
